Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -460,17 +460,17 @@
  EMBRACED:0 "受容"
  PRESENT:0 "存在"
  NOT_CREATED:0 "§g未発祥§!"
- EMBRACEMENT_RATIO:0 "全$NUM_PROVINCES$州中$NUM_EMBRACED|Y$州で採用しており、$COUNTRY_ADJ$の開発（自治率により$TOTAL_DEV|Y$）合計の$VAL|Y$です。"
- EMBRACE_RATIO2:0 "次の州では$NAME$を採用しておらず、追加コストが発生しています：\n"
+ EMBRACEMENT_RATIO:0 "全$NUM_PROVINCES$州中$NUM_EMBRACED|Y$州、$COUNTRY_ADJ$の開発度合計（自治率により$TOTAL_DEV|Y$）の$VAL|Y$で受容されています。"
+ EMBRACE_RATIO2:0 "$NAME$を受容していないため、追加コストが発生している州：\n"
  EMBRACE_RATIO_PROV:0 " $PROV$ $COST|Y$¤（開発度$DEV$）\n"
- EMBRACE_RATIO3:0 "（その他$NUM$州から$COST|Y$¤のコスト）\n"
+ EMBRACE_RATIO3:0 "（他$NUM$州から$COST|Y$¤）\n"
  PRESENCE_IN_COUNTRY:0 "$NAME$における存在"
- HAS_EMBRACED:0 "$INSTITUTION|Y$を採用しています"
+ HAS_EMBRACED:0 "$INSTITUTION|Y$を受容しています"
  NO_TRADE_COMPANY_RECENTLY_REMOVED:0 "$WHEN|Y$まで、交易会社にこの州を追加できません。"
  CURRENT_PENALTY:1 "現在の技術コストペナルティ"
  MODIFIER_LOCAL_FRIENDLY_MOVEMENT_SPEED:0 "友軍の移動速度"
  MODIFIER_LOCAL_HOSTILE_MOVEMENT_SPEED:0 "敵地での移動速度"
- WHEN_EMBRACED:0 "受容した時"
+ WHEN_EMBRACED:0 "受容時"
  ORIGIN_PROVINCE:0 "発祥地：$NAME$"
  ACTIVE_AI:0 "AIは$NAME$をコントロールします。"
  ACTIVE_AI_DESC:0 "オフにした場合、AIは脳死します。"
@@ -719,7 +719,7 @@
  MODIFIER_ALLOWED_NUM_OF_BUILDINGS:0 "建設可能数"
  BUILDING_NOT_IN_GOLD_PROVINCE:0 "$NAME$は$GOODS$を生産している州に建設することはできません。"
  TOO_MANY_BUILDINGS:0 "この州でこれ以上建築することはできません。"
- ASSAULT_WIDTH:0 "最大$VAL$の歩兵のみが、毎日効果的な攻撃を行います。"
+ ASSAULT_WIDTH:0 "毎日最大$VAL$人の歩兵だけが、効果的に突撃を行うことができます。"
  FORT_MAINTENANCE_MODIFIER:0 "要塞維持費"
  MIL_fort_maintenance:0 "要塞維持費"
  FORT_MAINTENANCE_LONG:0 "我が国で、要塞レベル毎に毎月かかるコストが幾らかを表しています。"
@@ -1326,7 +1326,7 @@
  YOU_HORDE_UNITY_EFFECTS:0 "§Y現在の遊牧民の結束からの影響：§!"
  THEY_HORDE_UNITY_EFFECTS:0 "§Y彼らの現在の遊牧民の結束からの影響：§!"
  NO_MIL_COST_MAINT:2 "この指揮官は維持費として§G0§!$TYPE$ のコストがかかります。\n"
- MIL_COST_MAINT:2 "この指揮官は、維持費として毎月$COST|Y$$TYPE$ のコストがかかります。我が国には指揮官が$CURR|Y$人おり、維持費なしで$ALLOW|Y$人持つことができます。\n"
+ MIL_COST_MAINT:2 "この指揮官は、毎月$COST|Y$$TYPE$ の維持費がかかります。$CURR|Y$人の指揮官がおり、維持費なしで$ALLOW|Y$人抱えることができます。\n"
  MODIFIED_BY_TAX_TT:0 "補正x§Y$MOD$§!、以下の理由\n"
  MONTHS_OF_RULING_TRIG_NOT:0 "$WHO$が§Y$MONTHS$§Wヶ月未満統治している。\n"
  MONTHS_OF_RULING_TRIG:0 "$WHO$が§Y$MONTHS$§Wヶ月以上統治している。\n"
@@ -2447,9 +2447,9 @@
  ICON_OFFERFLEET:0 "§Y港湾使用権§!の提供"
  VIEW_PLAYER_COUNTRY:0 "自国を見る"
  HAS_NO_IDEAS:0 "どのアイデアもロック解除していません"
- CORE_EXPLAIN_LOSE:0 "国家は以下のうち直近の出来事から§Y$YEARS$§W年後に中核州を失うでしょう：\n1)それを受け取った後\n2)該当国家と現所有者との戦争後\n3)州の所有者変更"
- CORE_EXPLAIN_LOSE_CULTURE_GROUP:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!と同じ文化グループであり、以下のうち直近の出来事から§Y$YEARS$§W年後に§Y$PROV$§!が中核州ではなくなるでしょう：\n1)それを受け取った後\n2)該当国家と現所有者との戦争後\n3)州の所有者変更"
- CORE_EXPLAIN_LOSE_PRIMARY_TAG:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!の主要国家であり、以下のうち直近の出来事から§Y$YEARS$§W年後に§Y$PROV$§!が中核州ではなくなるでしょう：\n1)それを受け取った後\n2)該当国家と現所有者との戦争後\n3)州の所有者変更"
+ CORE_EXPLAIN_LOSE:0 "国家は以下のうち直近の出来事から§Y$YEARS$§W年後に中核州を失うでしょう：\n1)州受領後\n2)該当国家と現領有国との戦争後\n3)州の領有国変更"
+ CORE_EXPLAIN_LOSE_CULTURE_GROUP:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!と同じ文化グループであり、以下のうち直近の出来事から§Y$YEARS$§W年後に§Y$PROV$§!が中核州ではなくなるでしょう：\n1)州受領後\n2)該当国家と現領有国との戦争後\n3)州の領有国変更"
+ CORE_EXPLAIN_LOSE_PRIMARY_TAG:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!の主要国家であり、以下のうち直近の出来事から§Y$YEARS$§W年後に§Y$PROV$§!が中核州ではなくなるでしょう：\n1)州受領後\n2)該当国家と現領有国との戦争後\n3)州の領有国変更"
  CORE_EXPLAIN_BUY:0 "この州を中核州とするため§Y$POINTS$§W£adm£を消費します。"
  THEYCANNOTCORE:0 "§Y$WHO$§Rが§Y$PROVINCE$§Rを中核州とするには距離が遠すぎます。"
  WARSCORE:0 "戦勝点"
@@ -3438,7 +3438,7 @@
  MACRO_BUILDING_TOOLTIP:0 "$BUILDING|Y$\n-----\n§Gクリックすると$PROVINCE$に建築§!\n$MODIFIERS$\n\n$BUILDINFO$"
  MACRO_NOT_ENOUGH_DUCATS:0 "資金が足りません。"
  MACRO_NOT_ENOUGH_MONARCH_POINTS:0 "$ICON$が足りません。"
- MACRO_WILL_EXCEED_FORCE_LIMIT_WARNING:0 "§Rこの編制で扶養限界を超えるため追加コストが発生します§!"
+ MACRO_WILL_EXCEED_FORCE_LIMIT_WARNING:0 "§Rこの編制で扶養限界を超えるため追加コストが発生します。§!"
  MACRO_CLICK_TO_BUILD:0 "$PROVINCE$に建設するにはクリック"
  MACRO_CLICK_TO_BUILD_UNIT:0 "$UNIT$を$PROVINCE$で編制するにはクリック"
  MACRO_CLICK_TO_BUILD_TEMPLATE:0 "テンプレート$NAME$を$PROVINCE$で編制するにはクリック"
@@ -5075,7 +5075,7 @@
  ab_spain_shock_tactics:0 "スペイン元帥"
  ab_persia_development:0 "ペルシャの啓蒙"
  ab_dutch_trade:0 "オランダの商業化"
- ab_austrian_morale:0 "オーストリアの不屈"
+ ab_austrian_morale:0 "オーストリアの粘り強さ"
  grant_consessions_to_the_eunuchs:0 "宦官への譲歩"
  grant_consessions_to_the_janissaries:0 "イェニチェリへの譲歩"
  YOU_MERITOCRACY_IRO:0 "§Y能力主義§!\n次の要因により能力主義が年間$CHANGE$変化します：\n$WHY$"
