--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -182,7 +182,7 @@
  devotion_events.2.a:0 "我々にはこれが必要なのだ。民衆など無視しろ！"
  devotion_events.2.b:0 "今持っている資金で可能な手を打つべきだ"
  devotion_events.3.t:0 "要塞群の近代化"
- devotion_events.3.d:0 "要塞は、もはや我々の目の前で崩れ落ちるように見え、それらは現在、城壁へのほとんどの攻撃に耐えられるほど頑強ではない。それらの防衛は、その時代にもかかわらず機能的で印象的だが、他国の要塞と比べるとまだ不十分である。我々は、要塞が非常に必要としている改修や近代化に資金を提供するために、納税者の​​ポケットの中をよく調べる必要があるだろう。"
+ devotion_events.3.d:0 "要塞は、もはや我々の目の前で崩れ落ちるように見え、それらは現在、城壁へのほとんどの攻撃に耐えられるほど頑強ではない。それらの防衛は、その時代にもかかわらず機能的で印象的だが、他国の要塞と比べるとまだ不十分である。我々は、要塞が非常に必要としている改修や近代化に資金を提供するために、納税者のポケットの中をよく調べる必要があるだろう。"
  devotion_events.3.a:0 "より大いなる利益のために…誰も侵略されることは望まないだろう？"
  devotion_events.3.b:0 "今のままで十分だ"
  devotion_events.4.t:0 "高すぎる税金"
@@ -359,7 +359,7 @@
  devotion_events.208.b:0 "何とか解決してみよう。"
  devotion_events.208.c:0 "その者を解雇せよ。"
  devotion_events.209.t:0 "退廃に対する政変"
- devotion_events.209.d:1 "[Root.Monarch.GetTitle][Root.Monarch.GetName]の放蕩、退廃的な方法、イスラムの威信を回復することへの拒否に対する不平はますます一般的になっている。農民たちは、[Root.Monarch.GetName]が奴隷の女や音楽家と一緒に眠って夜を過ごし、[Root.Monarch.GetHerHis]の日々を費やしていることに​​怒りを抱いている。[Root.Capital.GetName]のイマームは、一般の祈りの中で[Root.Monarch.GetTitle]を批判し、農民でさえ彼を非難している！"
+ devotion_events.209.d:1 "[Root.Monarch.GetTitle][Root.Monarch.GetName]の放蕩、退廃的な方法、イスラムの威信を回復することへの拒否に対する不平はますます一般的になっている。農民たちは、[Root.Monarch.GetName]が奴隷の女や音楽家と一緒に眠って夜を過ごし、[Root.Monarch.GetHerHis]の日々を費やしていることに怒りを抱いている。[Root.Capital.GetName]のイマームは、一般の祈りの中で[Root.Monarch.GetTitle]を批判し、農民でさえ彼を非難している！"
  devotion_events.209.a:0 "私のやり方を変えることを約束する。"
  devotion_events.209.b:0 "農民は彼らが望むどんな非難でもするだろうが、私は[Root.Monarch.GetTitle]だ！"
  devotion_events.210.t:0 "ラフィダ"
