--- a/source/localisation/domination_additional_content_l_english.yml
+++ b/source/localisation/domination_additional_content_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
- desc_japan_increased_demand_of_spice:1 "Our people have acquired a taste for spices, and its production has been expanded to satisfy that increased demand."
- desc_japan_increased_demand_of_tea:1 "Our people have acquired a taste for tea, and its production has been expanded to satisfy that increased demand."
- desc_jap_onna_musha_modifier:1 "Women of the samurai warrior class are eager to serve us in battle."
- desc_mch_nurhaci_ruler_reforms_modifier:1 "The administrative reforms of our glorious leader, Nurhaci, are set to be the foundation of our illustrious empire, for centuries to come."
- desc_mch_nurhaci_general_reforms_modifier:1 "The military reforms of our glorious leader, Nurhaci, are set to be the foundation of our illustrious empire, for centuries to come."
- desc_mch_nurhaci_advisor_reforms_modifier:1 "The bureaucratic reforms of our glorious leader, Nurhaci, are set to be the foundation of our illustrious empire, for centuries to come."
- desc_mch_seven_grievances_declaration_modifier:1 "For far too long have the Emperors of China kept our people under their boot. The mistreatment at the hands of our southern neighbors ends today!"
- desc_mch_studied_korea_alphabet_modifier:1 "Conquering is not a foreign concept to our way of life. However, if we are to build an empire that will last, we must ensure to study those we subjugate and enshrine their knowledge to further our military and political purposes."
+ desc_japan_increased_demand_of_spice:1 "自国民は香辛料の風味を知り、彼らの欲求を満たすために必要な生産量は増大している。"
+ desc_japan_increased_demand_of_tea:1 "自国民は茶の風味を知り、彼らの欲求を満たすために必要な生産量は増大している。"
+ desc_jap_onna_musha_modifier:1 "女武者は、戦場での槍働きを渇望している。"
+ desc_mch_nurhaci_ruler_reforms_modifier:1 "偉大なる指導者ヌルハチによる一連の統治改革は、何世紀にも渡る我らが帝国の礎となるだろう"
+ desc_mch_nurhaci_general_reforms_modifier:1 "偉大なる指導者ヌルハチによる一連の軍事改革は、何世紀にも渡る我らが帝国の礎となるだろう。"
+ desc_mch_nurhaci_advisor_reforms_modifier:1 "偉大なる指導者ヌルハチによる一連の行政改革は、何世紀にも渡る我らが帝国の礎となるだろう。"
+ desc_mch_seven_grievances_declaration_modifier:1 "長きにわたって中華の皇帝は我々を足蹴にしてきた。南方の隣人による暴虐は今日で終わるのだ！"
+ desc_mch_studied_korea_alphabet_modifier:1 "征服とは我々の生き様に近しい在り方だ。しかし、帝国を維持しようとするならば、彼を知り己の軍事・政治的目的に被征服民の知識を活用しなくてはならない。"
  desc_mch_hyang_yak_system_modifier:1 "Succeeding in battle is but one part to achieving the subjugation of our enemies. If we are to efficiently administer our Korean subjects, we must engage in a form of contractual arrangement and allow a level of local autonomy in exchange for a higher tax."
  desc_mch_hopae_system_modifier:1 "Let us tap into our manpower reserves in the same form as the Joseon dynasties, learning from their efficient methods."
  desc_mch_kyujanggak_modifier:1 "The studies of Korean scholars will enlighten and help grow our own thought movements."
