--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -1002,7 +1002,7 @@
  flavor_mng.52.d:1 "[GetYear]年建造のこのモスクは、自国最大の都市部で建造されたモスクの中でも最大のものです。この礼拝の場は、自国のイスラム臣民にとって宗教中心地として機能しています。美しいミナレットと貴石で装飾され、息をのむような芸術作品に囲まれたこの建築物は、自国の友好と協力の象徴となっています。"
  flavor_mng.52.a:0 "我が偉大なる国家にとって寛容と共同繁栄の象徴だ！"
  flavor_mng.53.t:0 "詩人楊慎"
- flavor_mng.53.d:1 "One of the great poets of our era, Yang Shen is the pride of his home province of Chengdu. Known by multiple art names like Sheng'an, Bonan Shanren and Bonan Shushi, he is a master writer and lyricist, having already produced great quantities of works, generally around the theme of nature and culture. Some of his works have already reached such widespread notoriety, that his name is sure to be etched forever in the pages of history."
+ flavor_mng.53.d:1 "当代の大詩人の一人、楊慎は彼の故郷である成都にとって誇りです。升庵、博南山人、滇南戍史など複数の雅号で知られる彼は優れた文人であり詩家でもあり、自然と文化を題材にした作品を既に非常に多く生み出しています。彼の作品のいくつかは広く名を知られた作品であり、彼の名は史書に永遠に刻まれることでしょう。"
  flavor_mng.53.a:0 "我が国の偉大なる知性の輝かしき象徴だ。"
  flavor_mng.54.t:0 "[GetYear]年地震"
  flavor_mng.54.d:0 "Great tragedy has struck our provinces. The heavens grew dark and the earth split, as it swallowed many of our commoners in its deadly embrace. The local folk grow superstitious and rumors have started circulating about our ruler having lost the favor of Heaven..."
@@ -1569,7 +1569,7 @@
  unlock_roman_empire_reform_tt:0 "政府改革「§Yローマ帝国§!」が解禁されます。"
  unlock_roman_republic_government_tt:0 "政府改革「§Y共和政ローマ§!」が解禁されます。"
  enable_improved_consecration_tt:1 "主教座の奉献はステート維持費補正の代わりに§G+10.0%§!の州税補正を与えるようになります。"
- consecrated_ground:0 "Consecrated Ground"
+ consecrated_ground:0 "聖域"
  desc_consecrated_ground:0 "The ground is consecrated. It might deal holy damage if you stand too long on it."
  on_parliament_abolished_effect_tt:0 "Remove ALL §YModifiers§! which are enacted through the §YParliament§!."
  bribe_effect_scales_with_estate_brahmins_tt:0 "§Y[Root.GetBrahminsName]§!の忠誠度に反比例（[Root.GetBrahminsLoyaltyStatus]）"
@@ -2061,10 +2061,10 @@
  grain_vodka_bonus_prod:0 "ウォッカ生産"
  desc_grain_vodka_bonus_prod:0 "This province is using its grain for the production of valuable vodka."
  mechanic_extra_trade_goods_from_grain_yes:0 "§Y穀物§!を産出する領有州はすべて、以下のボーナスを得ます：\n州の生産効率：§G+125.0%§!\n州の不穏度：§G-1.00§!"
- governing_senate_reform:0 "Governing Senate"
- governing_senate_reform_desc:0 "The governing senate is the assembly of our ruler's most trusted advisors and the highest legislative, judicial and executive institution of the empire. Unlike its predecessor, the boyar Duma, the senate covers the concerns of all the estates and senators."
- enforced_autocracy_reform:0 "Enforced Autocracy"
- enforced_autocracy_reform_desc:1 "The rule of the Emperor is absolute and can not be second to anyone. The estates and other institutions of the state are bound to the Emperor."
+ governing_senate_reform:0 "元老院"
+ governing_senate_reform_desc:0 "元老院は自国の支配者に最も信頼される顧問たちと帝国の最高立法、司法、行政機関の議会である。前身のボヤール・ドゥーマとは異なり、元老院は全ての階級や議員の関心事を取り扱う。"
+ enforced_autocracy_reform:0 "強制的独裁政治"
+ enforced_autocracy_reform_desc:1 "皇帝の統治は絶対的であり、誰も代わりえない。階級や他の機関は皇帝に紐づく。"
  mechanic_can_sell_crownland_to_single_estates_yes:0 "特定の階級に称号を売却できます"
  mechanic_can_seize_crownland_of_single_estates_yes:0 "特定の階級から領地を没収できます"
  holy_synod_reform:0 "聖務会院"
@@ -2074,7 +2074,7 @@
  head_of_the_patriarchy_reform:0 "総主教"
  head_of_the_patriarchy_reform_desc:0 "State and Church are intertwined into one complete entity of the nation. The absolutist rule of the Emperor is supported by the Patriarchate."
  peters_government_reform:0 "階級表"
- peters_government_reform_desc:0 "The Empire needs a strong rulership free from the ambitions and intrigues of the boyars. The Table of Ranks restructures the hierarchical system of the Nobility, rewarding merit in the matters of military, bureaucracy and other subjects of the government. The nobles are bound to the Emperor by their personal service."
+ peters_government_reform_desc:0 "帝国は、ボヤールたちの野心と陰謀から解放された強力な支配体制を必要としている。階級表は貴族の階級制度を再構成し、軍事、官僚機構、および他の政府の事項における功績への恩賞である。貴族たちは個人的な役務によって皇帝と結びついている。"
  ruthenian_tsardom:0 "ルテニア・ツァーリ国"
  ruthenian_tsardom_desc:0 "この国家は改革されたキエフ・ルーシのツァーリ国である。ローマ帝国の遺産と正教会の影響を受けたキエフ・ルーシのツァーリは、東スラブの人々を外国の脅威から守るための神聖な義務を負っている。"
  great_russian_republic_reform:0 "大ロシア連邦"
@@ -2698,7 +2698,7 @@
  flavor_tur.207.t:0 "騎士海賊団を撃退"
  flavor_tur.207.desc:1 "That the Knights of Saint John could even claim to be men of faith is a joke in and of itself. Perhaps in the days of Salah ad-Din, they may have been an honorable organization, even if still a heathen one. In recent years, however, the order has been nothing more than a gang of picaroons and reavers harassing our shipping lanes and seizing the goods of our peaceful merchants. Fortunately, now that we have expelled this band of thieves from Rodes, our merchants can once again travel the seas unmolested, and denizens of our coastal settlements can sleep without having to fear groups of marauding Franks seizing their wealth."
  flavor_tur.207.a:0 "我が海岸に安全と繫栄を！"
- flavor_tur.207.a.tt:0 "Every coastal province afflicted by coastal raids will receive:"
+ flavor_tur.207.a.tt:0 "沿岸襲撃に苦しんでいたすべての沿岸州が獲得："
  flavor_tur.208.t:0 "イェニチェリ"
  flavor_tur.208.desc:0 "オスマン軍は伝統的に騎兵を主体としてきました。14世紀半ば、オルハン1世とその息子のムラト1世は、スルタンのみに忠誠を誓う精鋭部隊、イェニチェリを導入しました。捕虜や奴隷から編成されたイェニチェリは、オスマン軍の中核となり、規律高く、定期的に給与が支給されました。\n\n時が経つにつれて、スルタンたちがイェニチェリ軍をますます頼るようになり、国内での権力と影響力を増していきました。現在において、イェニチェリはオスマン社会における独自の戦士階級となり、このまま放置したならば、相当量の特権を要求することができます。"
  flavor_tur.208.a:0 "だが、彼らも盤上のチェスの駒の一つに過ぎない。"
@@ -2742,14 +2742,14 @@
  flavor_tur.216.a:0 "我らは世界で最も偉大な帝国の継承者だ！"
  flavor_tur.216.b:0 "ローマは現在我がものだ、しかし我が独自性は明らかに[Root.GetName]だ。"
  flavor_tur.217.t:0 "新たな帝国の首都？"
- flavor_tur.217.desc:0 "With the conquest of Rome, the very city which gave the Roman Empire its name, our claim on the Roman Crown can no longer be disputed. As the heart of the empire is now part of our own realm, the question arises if we should move our capital from Konstantiniyye to Roma. Our rule over the Italians would be absolute, but on the other hand we could expand the offices and infrastructure of Konstantiniyye instead in order to strengthen our grip over the eyalets."
+ flavor_tur.217.desc:0 "ローマ帝国の名前の由来となったローマを陥落させたことで、ローマ帝国の後継者を称する我々の主張は揺るぎないものとなった。かつてのローマ帝国の心臓部は自国領にあるが、首都をコンスタンティニエからローマへと移転するかが問題となっている。移転によりイタリア統治を徹底することもできれば、代わりにコンスタンティニエのインフラを強化することでエヤレトの支配を強化できるであろう。"
  flavor_tur.217.a:0 "ローマが新たな首都であるべきだ。"
- tur_accept_all_italian_cultures_tt:0 "All cultures in the §YLatin§! culture group will be accepted. This effect is removed if we demote any §YLatin§! culture."
- tur_take_over_italian_eyalets_tt:0 "§YEyalets§! which have their capital in §YItaly§! will cede all their provinces in §YItaly§! to §Y[Root.GetName]§!.\n§Y[Root.GetName]§! gets a territorial core on every ceded province."
+ tur_accept_all_italian_cultures_tt:0 "§Yラテン§!文化グループに属する全文化が受容されます。この効果は§Yラテン§!文化のいずれかを降格させた場合、削除されます。"
+ tur_take_over_italian_eyalets_tt:0 "§Yイタリア§!に首都がある§Yエヤレト§!は§Yイタリア§!にある州すべてを§Y[Root.GetName]§!に割譲します。\n割譲された州すべてが§Y[Root.GetName]§!のテリトリーの中核州になります。"
  flavor_tur.217.b:0 "コンスタンティニエが帝国の唯一の正統な首都だ。"
- tur_enable_central_italy_eyalet_event_tt:0 "The event §YThe Eyalet of Rome§! is available to occur."
+ tur_enable_central_italy_eyalet_event_tt:0 "イベント§Yローマのエヤレト§!が発生するようになります。"
  flavor_tur.218.t:0 "ローマのエヤレト"
- flavor_tur.218.desc:0 "The great city of Rome is ours. However, our decision to maintain our capital in [Root.Capital.GetName] makes governing this prestigious city a difficult challenge. Fortunately for us, there are many who are more than excited to administrate the territory around this former imperial capital."
+ flavor_tur.218.desc:0 "偉大なる都市ローマは我々のものだ。しかし、[Root.Capital.GetName]に首都を置いたままにする決断は、結果としてこの栄光ある都市の統治に困難な問題を突きつけている。幸いにも古き帝国の首都周辺を統治することに興奮している者は大勢いる。"
  flavor_tur.218.a:0 "[first_potential_eyalet.GetName]州を設立しよう。"
  flavor_tur.218.b:0 "[second_potential_eyalet.GetName]州がローマを統治すべきだ。"
  flavor_tur.218.c:0 "彼らの助けは必要ない。我々自身でローマを支配できる。"
@@ -3158,12 +3158,12 @@
  desc_tur_weakened_the_harem:0 "As the Harem grew to powerful in the past, our great Sultan reined it in and ensured that neither eunuch nor concubine can ever gain influence over the government and court.\n\nThe heirs of the Harem have §R2 less§! skill as long as this modifier is active."
  tur_reign_of_women_modifier:0 "女人政治"
  desc_tur_reign_of_women_modifier:0 "Also known as the 'Sultanate of Women', the Reign of Women is the period of Ottoman history where the Harem had significant power over the Sultan and his decision-making. Matters of administration and diplomacy were now handled by the mothers and wives of the Sultan."
- tur_secured_vali_ahad_modifier:0 "Secured the Vali Ahad's Succession"
- desc_tur_secured_vali_ahad_modifier:0 "The succession is secured now that all rebellious brothers have either been executed or expelled from the country."
- tur_rebellion_line_modifier:0 "Rebellious Line of Succession"
- desc_tur_rebellion_line_modifier:0 "Letting the brother live has proven fatal. Despite the mercy of our Sultan, the brother tries to usurp him by motivating our loyal subjects to rise against the Sultan..."
- tur_sabotaged_bureaucracy_modifier:0 "Sabotaged Bureaucracy"
- desc_tur_sabotaged_bureaucracy_modifier:0 "The brother of the Sultan was shown mercy. As thanks, he sabotaged our bureaucracy.\nWe should have executed this buffoon..."
+ tur_secured_vali_ahad_modifier:0 "安全なヴァリ・アハド継承"
+ desc_tur_secured_vali_ahad_modifier:0 "反抗的な兄弟を処刑もしくは国家から追放することで、今や継承は安全となりました。"
+ tur_rebellion_line_modifier:0 "反抗的な継承系統"
+ desc_tur_rebellion_line_modifier:0 "兄弟を生かしておくことは致命的であることが判明した。我がスルタンの慈悲にもかかわらず、兄弟は王位簒奪を企て、我が忠実なる臣下がスルタンに対して立ち上がるよう扇動しているのだ..."
+ tur_sabotaged_bureaucracy_modifier:0 "官僚機構の妨害"
+ desc_tur_sabotaged_bureaucracy_modifier:0 "スルタンの兄弟に慈悲が示されている。ありがたいはずなのに、彼は我々の官僚機構を妨害したのだ。\n我々はこの道化者を処刑しなくては…"
  tur_hormuz_toll_modifier:0 "ホルムズの通行料"
  desc_tur_hormuz_toll_modifier:0 "The Hormuz sound toll was introduced by the Grand Vizier of the Ottoman Empire. All foreign cargo ships passing through the Strait of Hormuz have to pay a toll to the Empire in order to pass."
  tur_abu_hanifa_mosque_modifier:0 "アブ・ハニファ・モスク"
@@ -4583,16 +4583,16 @@
  flavor_rus.37.b:0 "元老院を廃止せよ。"
  flavor_rus.38.t:0 "聖務会院"
  flavor_rus.38.desc:0 "宗教は国家の基礎を支える柱である。記憶の限り、[Root.GetName]は正教国家であった。\nしかし、宗教と政府は常に調和しているわけではない。たった一人の総主教に率いられた主教らは[Root.Monarch.GetTitle]の絶対的な統治に無視できない脅威を示してきた。対抗策として、[Root.GovernmentName]に仕える聖務会院が創設され総主教の分権化が図られた。"
- flavor_rus.38.a:0 "Create the Holy Synod."
+ flavor_rus.38.a:0 "聖務会院を創設せよ。"
  flavor_rus.38.b:0 "現在の制度で十分だ。"
  flavor_rus.39.t:0 "総主教の強化"
  flavor_rus.39.desc:0 "宗教は国家の基礎を支える柱である。記憶の限り、[Root.GetName]は正教国家であった。\n総主教の影響力が大きくなるにつれて、政府に対する支配力もまた大きくなっている。やがて、総主教からの提案が[Root.Monarch.GetTitle]へと届く。総主教にさらなる特権を与え、その見返りに教会が[Root.Monarch.GetTitle]の後ろ盾となるというものである。"
  flavor_rus.39.a:0 "提案を承認する。"
  flavor_rus.39.b:0 "却下だ。"
  flavor_rus.40.t:0 "新総主教"
- flavor_rus.40.desc:0 "Religion is one of the base pillars of our nation. Ever since we can think back, [Root.GetName] has been Orthodox.\nThe [Root.Monarch.GetTitle]'s influence over the Patriarchate has become indistinguishable from [Root.Monarch.GetHerHis] absolute rule over [Root.GetUsableName]. Unlike so many other [Root.Monarch.GetTitle]s before [Root.Monarch.GetHerHim], [Root.Monarch.GetName] has the opportunity to seize the power of the Patriarchate and declare [Root.Monarch.GetHerselfHimself] as the head of the new Patriarchate."
- flavor_rus.40.a:0 "Combine the role of the Patriarch with the [Root.Monarch.GetTitle]"
- flavor_rus.40.b:0 "We should not meddle with the affairs of the Church"
+ flavor_rus.40.desc:0 "宗教は自国の基本的な支柱の一つです。できうる限り振り返ってみても、[Root.GetName]は正教会でした。\n[Root.Monarch.GetTitle]の総主教への影響力は、[Root.GetUsableName]に対する絶対的支配と区別がつかないほどになっています。[Root.Monarch.GetName]は、これまでの多くの[Root.Monarch.GetTitle]と違い、総主教の権力を掌握し、自らが新たな総主教の長だと宣言する機会を得ました。"
+ flavor_rus.40.a:0 "総主教と[Root.Monarch.GetTitle]の役割を統合せよ"
+ flavor_rus.40.b:0 "教会のコトに首を突っ込むべきじゃないよ"
  flavor_rus.44.t:1 "[Root.GetUsableNameCap]と革命の時代"
  flavor_rus.44.desc:0 "新たな時代が目前に迫っている。[Root.GovernmentName]の根幹を脅かすものであり、これまでにない時代である！\n解放と自由の思想が驚異的な速さで臣民の頭の中で育っている。古い社会構造がいつまでその姿を保てるかは誰にも分からない…"
  flavor_rus.44.a:0 "まさに[Root.GetUsableName]の暗黒時代の始まりだ…"
@@ -4615,7 +4615,7 @@
  flavor_rus.101.a:0 "素晴らしい"
  flavor_rus.102.t:0 "アルハンゲリスクの設立"
  flavor_rus.102.desc:0 "白海は、1年のうち3カ月しかアクセスできないという性質上、航行が困難な海である。しかし、白海からの海上アクセスは、紛れもなく大きな価値を持つ。商人や町人がホルモゴリー州に移り住み、アルハンゲリスクの町ができた。"
- flavor_rus.102.a:0 "Ok"
+ flavor_rus.102.a:0 "結構"
  flavor_rus.105.t:0 "フィンランド大公国"
  flavor_rus.105.desc:0 "フィンランドの人々は、かつての支配者であったスウェーデンの法律と社会の中で、大きな自治と統合を楽しんできた。当然ながら、我々が土地を征服して以来、彼らは我々に対して同様の期待を持っている。\n我々の[Root.Monarch.GetTitle]が[Root.Monarch.GetHerHis]の私領として統治するフィンランド自治区の設立によって、フィンランド人をなだめることができるだろう。"
  flavor_rus.105.a:0 "自治権を持つ大公国を設立する。"
@@ -4631,10 +4631,10 @@
  flavor_rus.114.desc:0 "貿易は[Root.GetUsableName]の生命線の1つである。特に、件の貿易がオスマン帝国など他の列強と行われている場合は、なおさらである。\n[Root.Monarch.GetTitle][Root.Monarch.GetName]はそれを最初に認識し、オスマンとの貿易をコントロールするためにアゾフから数キロメートル離れた場所に要塞を築いた。その後、アゾフはその重要性を失い、ロストフ・ナ・ドヌが商業の中心地として台頭してきた。"
  flavor_rus.114.a:0 "よし。"
  flavor_rus.116.t:0 "[Root.GetAdjective]＝[rus_persian_ally.GetAdjective]同盟の将来"
- flavor_rus.116.tt:0 "The event '§YThe Future of the [Root.GetAdjective]-Caucasus Alliance§!' happens."
- flavor_rus.116.desc:0 "Originally an alliance of convenience and [Root.Religion.GetGroupName] sense of duty, the bound between [Root.GetUsableName] and [rus_persian_ally.GetUsableName] is stronger than any political tie our state has seen in the past. Through cunning strategies and combined forces, the Muslim threat from Persia has been eliminated and the people of [rus_persian_ally.GetUsableName] celebrate a life free from the menace of great powers.\nIt is obvious that the [rus_persian_ally.GetAdjective] owe us for our support, and no other reward than their loyalty to the [Root.GetAdjective] crown is good enough."
+ flavor_rus.116.tt:0 "イベント「§Y[Root.GetAdjective]＝コーカサス同盟の将来§!」が発生します。"
+ flavor_rus.116.desc:0 "元々は都合が良くて[Root.Religion.GetGroupName]の使命感から生まれた同盟ですが[Root.GetUsableName]と[rus_persian_ally.GetUsableName]間の結びつきは、これまで自国が見てきたどんな政治的な結びつきよりも強固なものです。巧妙な戦略と結集した力により、ペルシアからのムスリムの脅威は排除され、[rus_persian_ally.GetUsableName]国民は列強の脅威から解放された生活を祝っています。\n[rus_persian_ally.GetAdjective]が自国の支援に対して恩義を感じていることは明白であり、彼らの[Root.GetAdjective]王位への忠誠以外に十分な報酬は存在しません。"
  flavor_rus.116.a:0 "[rus_persian_ally.GetUsableName]は[Root.GetUsableName]の前に跪くべきだ！"
- flavor_rus.117.tt:0 "We will demand the subjugation of §Y[rus_persian_ally.GetUsableName]§!, making them into our §YVassal§! should they give in.\n§Y[rus_persian_ally.GetUsableName]§! will always decline if they have more than §Y500§! total development."
+ flavor_rus.117.tt:0 "彼らが屈服すれば、§Y[rus_persian_ally.GetUsableName]§!の従属化を要求し、降伏を受け入れたならば、彼らは自国の§Y属国§!となるでしょう。\nもし、§Y[rus_persian_ally.GetUsableName]§!の総開発度が§Y500§!以上の場合、必ず拒否されます。"
  flavor_rus.116.b:1 "[rus_persian_ally.GetUsableNameCap]と[Root.GetUsableName]は対等だ。"
  RUS_PERSIAN_TRADE:0 "ペルシアにおけるロシアの存在感"
  flavor_rus.117.t:1 "[From.GetUsableNameCap]が属国化を要求"
@@ -6651,7 +6651,7 @@
  grand_canal_2:0 "蘇州段運河"
  grand_canal_3:0 "鎮江段運河"
  grand_canal_4:0 "南京段運河"
- imperial_city_kyoto:0 "帝都京都"
+ imperial_city_kyoto:0 "京の都"
  ara_strongest_med_fleet:0 "No country with their capital in a Mediterranean-adjacent region has a larger fleet than us"
  ara_med_claim_modifier:0 "アラゴン艦隊"
  desc_ara_med_claim_modifier:0 "Our flag will proudly fly across the vast Mediterranean Sea, our navies proudly displaying our prestige and power to the world."
