--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -3230,8 +3230,8 @@
  WEMILALLDISHONOUR_SETUP:0 "我々が軍事同盟を履行しなかったとき"
  WEMILALLDISHONOUR_HEADER:0 "$MESSENGER$"
  WEMILALLDISHONOUR_1:0 "軍事同盟の不履行"
- WEMILALLDISHONOUR_2:0 "$MONARCHTITLE$、我々は宣戦布告された次の国"
- WEMILALLDISHONOUR_3:0 "$ACTOR$"
+ WEMILALLDISHONOUR_2:0 "$MONARCHTITLE$、我々は"
+ WEMILALLDISHONOUR_3:0 "$ACTOR$が始めた戦争"
  WEMILALLDISHONOUR_4:0 "に対して、現時点で関与しないことを決定しました。"
  WEMILALLDISHONOUR_6:1 "我々は、彼らにこの戦争は彼ら自身の問題だと伝えることに大きな喜びを感じました。$FAITH$"
  WEMILALLDISHONOUR_LOG:0 "$ACTOR$との同盟を履行せず"
