--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -1646,7 +1646,7 @@
  junior_central_african_ancestor_cult:0 "ミリラ"
  desc_junior_central_african_ancestor_cult:0 "神託を通じて、我々は死んだ祖先や自然の精霊と交流することができる。このようにして、我々は我々の前に生きた人々を尊重し、我々を取り囲む敵対的な環境に対処するための援助を得ることができる。"
  junior_mwari_cult:0 "ムワリ"
- desc_junior_mwari_cult:0 "我々は何もない世界を創造し、彼が話すときに山をも震えさせるム​​ワリの偉大な神を称える。ムワリは唯一の真の神であり、この地球上の彼の神託と声は我々を支配するものだ。"
+ desc_junior_mwari_cult:0 "我々は何もない世界を創造し、彼が話すときに山をも震えさせるムワリの偉大な神を称える。ムワリは唯一の真の神であり、この地球上の彼の神託と声は我々を支配するものだ。"
  junior_enkai_cult:0 "エンカイ"
  desc_junior_enkai_cult:0 "我々は天空の神であり、我々に群れを送り、我々を世界のすべての牛の正当な所有者としたエンカイに従う。天の支配者として、彼は雨によって我々を祝福し、時には怒りによってそれを控える。"
  junior_waaq_cult:0 "ワーカ"
@@ -1810,8 +1810,8 @@
  zan_kilwan_embassy:0 "キルワ大使館"
  desc_zan_kilwan_embassy:0 "この州にはキルワからの大使館があり、ペルシアとアフリカの外交窓口となっている。\n\n§Y州の所有者が変わった場合、この補正は削除される。§!"
  zan_persian_embassy:0 "ペルシア大使館"
- desc_zan_persian_embassy:1 "この州は[2218.Owner.GetName]からの大使が滞在しており、ペルシャーアフリカ間の外交窓口として務めている。\n\n§Y州の所有者が変更された場合、この補正は削除される。§!"
- zan_embassy_desc:1 "州の所有者が変更されるまで継続する"
+ desc_zan_persian_embassy:1 "この州は[2218.Owner.GetName]からの大使が滞在しており、ペルシャーアフリカ間の外交窓口として務めている。\n\n§Y領有国が変更された場合、この補正は削除される。§!"
+ zan_embassy_desc:1 "州の領有国が変更されるまで継続する"
  zan_expansion_into_the_cape:0 "ケープへの進出"
  desc_zan_expansion_into_the_cape:0 "自国の冒険家や探検家たちは、その地に隠された富を掘り起こすため、自ら進んでアフリカ南部へと進出した。"
  zan_great_kilwa:0 "大キルワ"
