--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -2015,7 +2015,7 @@
  durrani_dragoonDESCR:0 "アフマド・ハーン・アブダーリー、後のドゥッラーニーの支配の下、主にアフガニスタンの傭兵からなる軽騎兵部隊である。"
  durrani_rifled_musketeerDESCR:0 "18世紀半ば、ドゥッラーニー朝の父であるアフマド・ハーン・アブダーリーの下に提供されたアフガニスタン歩兵部隊である。"
  durrani_swivelDESCR:0 "持ち運びに便利な旋回砲を背後に搭載した騎兵ユニットであり、軍隊が自身の歩兵を超えて射撃を行うことを可能にした。"
- dutch_mauricianDESCR:0 "16世紀には、マスケット銃（携帯可能な銃）が普及したが、それらは再装填​​するのに非常に時間がかかった。陸軍の戦術家は、通常、陣形の中で火力を最大限に高めるため、マスケット兵を独特に配置した。こうして、マスケット兵は列（12、8または6列）に配置された。最前列が射撃を行うと、彼らは再装填するために後方に移動し、その後、次の列が射撃を行った。これは16世紀のマスケットの火力を最大限にし、再装填に時間がかかるという不利な点を克服するものであった。ナッサウのマウリッツは、八十年戦争でこれらのマスケット陣形の利用を開拓し、オランダ軍を教練した。彼の軍事戦略と戦術の発展は、オランダ軍をヨーロッパで最も近代的なものとした。"
+ dutch_mauricianDESCR:0 "16世紀にはマスケット銃（手持ち火器）が一般化したが、再装填に非常に時間がかかった。陸軍の戦術家は通常、火力を最大化するためにマスケット銃兵を陣形に組み込んだ。そのため、マスケット兵は隊列を組んで配置された（12列だったり、8、6列にも）。前列が発砲すると、再装填のために後方へ下がり、その後に次列が発砲する。これにより、16世紀のマスケット銃の火力が最大限に発揮され、再装填に時間がかかるという欠点も克服された。このようなマスケット銃隊形の使用を開拓し、八十年戦争でオランダ軍に教えたのはマウリッツ・ファン・ナッサウだった。彼の軍事戦略と戦術の発展により、オランダ軍はヨーロッパで最も近代的な軍隊となった。"
  early_frigateDESCR:0 "海外交易の増加に伴い、安全な旅を提供するため、速度の早い護衛船が必要となった。初期のフリゲートはこのために開発された。それらは1つの砲甲板を持つ、より小さく、より細身の戦闘艦であり、危険な海域において海賊からの保護を提供した。"
  east_asian_spearmenDESCR:0 "木製の槍で武装した下級歩兵。"
  eastern_bowDESCR:0 "東洋の陸軍の主要な軍隊を構成した馬に乗った弓兵である。"
@@ -2805,7 +2805,7 @@
  CORE_HAS_CONTROL:0 "彼らはその州を支配しています。"
  CORE_VASSAL_CONTROL:0 "彼らの従属国はその州を支配しています。"
  CORE_OVERLORD_CONTROL:0 "彼らの宗主国はその州を支配しています。"
- CORE_EXPLAIN:0 "国家は以下のうち直近の出来事から§Y$YEARS$§W年後に中核州を失うでしょう：\n1)それを受け取った後\n2)該当国家と現所有者との戦争後\n3)州の所有者変更\n\n国家は所有権を獲得して§Y$GAIN$§W年後に中核州を得るでしょう。"
+ CORE_EXPLAIN:0 "国家は以下のうち直近の出来事から§Y$YEARS$§W年後に中核州を失うでしょう：\n1)州受領後\n2)該当国家と現領有国との戦争後\n3)州の領有国変更\n\n国家は所有権を獲得して§Y$GAIN$§W年後に中核州を得るでしょう。"
  MAINTENANCE:0 "維持費"
  BASE_MAINTENANCE:0 "基本維持費"
  MAINTENANCE_DUC:0 " ダカット/月"
@@ -4185,8 +4185,8 @@
  HAVE_NOT_A_COT_IN:0 "以下に交易中心地を持っていない："
  HAVE_A_COT_IN:0 "以下に交易中心地を持っている："
  HAVE_A_PORT_IN:0 "以下に港を持っている："
- IS_HOME_OWNER_AREA:0 "§Y$PROV$§!は$COUNTRY$の首都と接続されています。\n"
- IS_NOT_HOME_OWNER_AREA:0 "§Y$PROV$§!は$COUNTRY$の首都と接続されていません。\n"
+ IS_HOME_OWNER_AREA:0 "§Y$PROV$§!が$COUNTRY$の首都と接続されている。\n"
+ IS_NOT_HOME_OWNER_AREA:0 "§Y$PROV$§!が$COUNTRY$の首都と接続されていない。\n"
  HAVE_NOT_A_PORT_IN:0 "以下に港を持っていない："
  HAVE_COUNTRY_FLAG:0 "国家フラグがある"
  HAVE_NOT_COUNTRY_FLAG:0 "国家フラグがない"
@@ -4198,8 +4198,8 @@
  BACKING_ISSUE:0 "§Y$PROV$§!は§Y$NAME$§!の現在の問題を支持しています。\n"
  PROVINCE_DONT_PRODUCE:0 "$PROVINCE$は$GOODS$を生産しない"
  PROVINCE_PRODUCE:0 "$PROVINCE$は$GOODS$を生産する"
- IS_NOT_ON_THE_CONTINET:0 "は次の大陸にない"
- IS_ON_THE_CONTINET:0 "は次の大陸にある"
+ IS_NOT_ON_THE_CONTINET:0 "は次の大陸にない："
+ IS_ON_THE_CONTINET:0 "は次の大陸にある："
  IS_NOT_SAME_CONTINENT:0 "$PROV1|Y$と$PROV2|Y$は同じ大陸にはありません。"
  IS_SAME_CONTINENT:0 "$PROV1|Y$と$PROV2|Y$は同じ大陸にあります。"
  IS_NOT_IN_THE_SUPERREGION:0 "$PROVINCE|Y$は$SUPERREGION|Y$亜大陸にない"
@@ -4357,7 +4357,7 @@
  NEIGHBOR_COUNTRY_STARTS:0 "隣国"
  TRIGGER_NUM:0 "対象の数"
  TRIGGER_ALLY:0 "あらゆる同盟国"
- TRIGGER_OWNER:0 "州の所有者"
+ TRIGGER_OWNER:0 "州の領有国"
  TRIGGER_CONTROLLER:0 "州の支配者"
  TRIGGER_CAPITAL:0 "首都"
  TRIGGER_SEA_ZONE:0 "海洋ゾーンの外"
@@ -4390,7 +4390,7 @@
  CORE_SAME_CULTURE:0 "この州は、同じ文化グループなので、中核州として失われることはありません。"
  TOLERANCE_SLIDER:0 "これは$RELIGION$の州に影響するでしょう"
  NO_SUCC_SEPARATE:0 "継承戦争の対象国は個別の和平に署名することはできません。"
- HRE_DISMANTLE_EMPEROR:1 "現皇帝の本国首都である$COUNTRY|Y$の$PROV$を支配する必要があります。"
+ HRE_DISMANTLE_EMPEROR:1 "現皇帝の本国$COUNTRY|Y$の首都$PROV$を支配しなければなりません。"
  HRE_DISMANTLE_ELECTORS:0 "選帝候国$COUNTRY$があなた、又はあなたの従属国によって支配されていません。"
  NOOPENMARKET:0 "この市場は現在、我々の商人に対して閉鎖されています。我々はこれを開くために戦争や外交手段を使うことができます。"
  REVOLTRISK_EFFECT:1 "$WHERE|Y$の不穏度が$VALUE$$DIRECTION$（現在：$CURRENT|R$）\n"
@@ -5593,7 +5593,7 @@
  bohemia_austria_relations_title:0 "ハプスブルク家との関係"
  bohemia_austria_relations_desc:0 "オーストリアのハプスブルク家は時には興味深い隣人である。我々が彼らとの関係を改善できるかどうかを見てみよう。"
  improved_relations_with_electors_title:0 "$COUNTRY$選帝侯との関係を改善"
- improved_relations_with_electors_desc:0 "神聖ローマ帝国の選挙制度は時に真の問題となる。最近、我々は、§Y$COUNTRY$§Wの選帝侯に対して、我々が共にいられるほど人気が​​ないことに気付いた。我々の王朝が皇帝のままであることを保証するため、我々は絆を強化しなければならない。"
+ improved_relations_with_electors_desc:0 "神聖ローマ帝国の選挙制度は時に真の問題となる。最近、我々は、§Y$COUNTRY$§Wの選帝侯に対して、我々が共にいられるほど人気がないことに気付いた。我々の王朝が皇帝のままであることを保証するため、我々は絆を強化しなければならない。"
  become_emperor_title:0 "皇帝になる"
  become_emperor_desc:0 "我々は、帝国の統治者の間で選帝侯の威厳による恩恵を受けている。しかし、我々が他の選帝侯との関係を改善することができれば、皇帝の玉座は我々の手の内に入る可能性がある。"
  naval_recruiting_act_title:0 "海軍徴兵法の可決"
@@ -7826,7 +7826,7 @@
  ND_TECH_GROUP_REQUIRES:0 "§Y$NAME$§!の技術グループが必要："
  ND_GOVERNMENT_REQUIRES:0 "§Y$NAME$§!の政府が必要："
  ND_RELIGION_REQUIRES:0 "§Y$NAME$§!の宗教が必要："
- ND_PERSONALITY_REQUIRES:0 "支配者の個性「$PERSONALITYNAME|Y$」が、$RULERNAME|Y$のために必要："
+ ND_PERSONALITY_REQUIRES:0 "$RULERNAME|Y$のへ支配者個性「$PERSONALITYNAME|Y$」に必要："
  ND_RULER_PERSONALITY:0 "支配者の個性"
  ND_TRAIT_ALREADY_SELECTED:0 "特性はすでに選択されています"
  ND_CANNOT_FINALIZE_TITLE:0 "カスタム国家を作成することができません。"
