--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -151,7 +151,7 @@
  gun_designer_ruler:0 "銃設計士"
  desc_gun_designer_ruler:0 "我々の軍隊は、我々の支配者によって設計された珍しい種類の銃器を装備している。"
  personality_events.4.t:0 "金の追求"
- personality_events.4.d:0 "[Root.Monarch.GetName]は、[Root.Monarch.GetHerHis]の幼少期から金を作り出す可能性に夢中になっており、政府の財産​​は[Root.Monarch.GetHerHim]に開放され、これは強迫観念へと成長している。すべての本と必要な専門家は、[Root.Capital.GetCapitalName]に集められ、試験または質問されている。[Root.Monarch.GetName][Root.Monarch.GetHerselfHimself]は[Root.Monarch.GetHerHis]の研究所で何日も過ごしましたが、これまでこの高価な金属の作成には近づいていない。\nこの追求を愚かなことだと言う者もいるが、確実に我々の化学についての知識は向上している。"
+ personality_events.4.d:0 "[Root.Monarch.GetName]は、幼少期から金を作り出す可能性に取り憑かれており、政府の財源が[Root.Monarch.GetHerHim]に開放されたことで、これは強迫観念へと成長した。あらゆる書物や専門家と思われる人物が[Root.Capital.GetCapitalName]に集められ、調査や尋問を受けている。[Root.Monarch.GetName]自身も何日も研究室にこもっているが、今のところこの高価な金属を作り出すまでには至っていない。\nこの追求を愚の骨頂と呼ぶ者もいるだろうが、化学に関する知識を向上させたことは確かである。"
  personality_events.4.a:0 "素晴らしい、今はこれを後退させよう。"
  personality_events.4.b:0 "金を…作らねば…"
  personality_events.4.b.tt:0 "[Root.Monarch.GetHerHis]の錬金術の目標を達成するために、我々の君主に自由な裁量を与えます。成功の可能性は非常に不確実です。"
@@ -430,7 +430,7 @@
  naive_employer:0 "純真な雇用者"
  desc_naive_employer:0 "我が国の支配者は興奮しやすく、新しいアイデアのほとんどを試してみたいと思っており、顧問の間で人気がある。"
  personality_events.53.t:0 "[Root.Monarch.GetHerHisCap]の性格によって守られた"
- personality_events.53.d:0 "これは言いすぎだが、我々は[assassination_nation.GetName]の[assassination_nation.Monarch.GetTitle][assassination_nation.Monarch.GetName]の悪党たちから他に何を予想できただろう？昨晩、[Root.Monarch.GetTitle][Root.Monarch.GetName]は、[Root.Monarch.GetHerHis]の際どいところで暗殺の試みから生き延びた。我々は今回に限り、[Root.Monarch.GetHerHis]の浮気な性格に感謝しており、それがなければ、毒の塗られた短剣は確実にその目標を見つけていただろう。警備兵は犯人を捕まえることができ、我々の尋問者からの刺激を受け、我々は誰を非難すべきか​​正確に分かっている…"
+ personality_events.53.d:0 "これは言いすぎだが、我々は[assassination_nation.GetName]の悪党、[assassination_nation.Monarch.GetTitle][assassination_nation.Monarch.GetName]に他に何を期待できるというのか？昨晩、我らが[Root.Monarch.GetTitle][Root.Monarch.GetName]は、際どいところで暗殺から生き延びた。今回ばかりは、[Root.Monarch.GetHerHis]の気弱な性格に感謝したい。それがなければ、毒入りの短剣は確実に標的を見つけられていただろう。衛兵は殺し屋らしき人物を捕まえることに成功し、尋問官からの励ましの言葉もあって、誰を責めるべきかがはっきりした…"
  personality_events.53.a:0 "背後から短剣だと？我々はこの侮辱を軽く取ることはないだろう！"
  personality_events.54.t:0 "偶発的な賛辞"
  personality_events.54.d:0 "宴席中、[Root.Monarch.GetTitle][Root.Monarch.GetName]は、上品な食べ物とデザートについての議論に入った。関係者のほとんどは地元の料理の強みを主張して評価を固く維持していたが、[Root.Monarch.GetTitle]が[Root.Monarch.GetHerHis]の意見を口にしたときに、気まずい発言をした。「私はいつも、[cool_neighbor_country.GetName]が最高のチーズの大皿を持っていると思っていた！それに比べ、我々のは全く味気ない！」\n\nシェフはひどく侮辱されたが、[cool_neighbor_country.GetName]の[cool_neighbor_country.Monarch.GetTitle][cool_neighbor_country.Monarch.GetName]の諜報員がいたのか、後日、我々の元に大きなチーズの木箱が無料で届けられた。"
