--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -313,7 +313,7 @@
  FORCEBREAKALLIANCEDESC_NON_GREAT_POWER:0 "彼らが受け入れた場合、$WITH|Y$は自国に対する評価を下げ、自国に対して開戦事由を獲得します。\nこれにより、自国は好感度$FAVOURS$を失います。\n同じく、これにより$COUNTRY|Y$と$WITH$の間で停戦が成立します。"
  USING_FAVORS:0 "使用する好感度："
  refused_to_break_alliance_favor:0 "同盟破棄を拒否した"
- BREAKALLIANCE_FAVORTITLE:0 "同盟を破棄する"
+ BREAKALLIANCE_FAVORTITLE:0 "同盟を破棄させる"
  BREAK_ALLIANCE_FAVOR_DESC2:0 "好感度$FAVOR|Y$を使用して、彼らの同盟関係の一つを破棄させます。"
  BREAK_ALLIANCE_FAVOR_DESC:0 "$THEM|Y$の$WITH|Y$に対する同盟関係の解消を求めます。"
  BREAK_ALLIANCE_FAVOR_REQDES1:0 "$ACTOR|Y$は、自国が$THEM|Y$との同盟を破棄することを求めています。\nこれにより、自国と$ACTOR|Y$との間は停戦となり、自国が$THEM|Y$と締結済みの他の外交条約も無効となります。"
@@ -2190,7 +2190,7 @@
  CHANGE_COUNTRY_COLOR_EFFECT_SPECIFIC:0 "国家の色を$WHO|Y$に変更"
  RESTORE_COUNTRY_COLOR_EFFECT:0 "Restores the original Country colour"
  CENTRALIZE_STATE_MAXED_OUT:0 "The state has already been centralized as much as it can be."
- CANNOT_DISMANTLE_UNSUBJUGATED_ELECTOR:0 "$COUNTRY|Y$は、我々と同盟しているわけでも、従属しているわけでも、首都が我々の支配下に置かれているわけでもありません。"
+ CANNOT_DISMANTLE_UNSUBJUGATED_ELECTOR:0 "$COUNTRY|Y$は、我々と同盟・従属しているわけでも、首都が我々に支配されているわけでもありません。"
  MODIFIER_COLONY_DEVELOPMENT_BOOST:0 "植民地開発度の増加"
  FROM_PIRATE_HUNTING:0 "$CHANGE$ from Pirate Hunting in the Trade Node"
  KARMA_ACCELERATOR_DESC:0 "Karma accelerator effects - move Karma away from zero by $VAL|Y$ per month due to:"
