--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -144,7 +144,7 @@
  GOVERNMENT_POWER_FROZEN:0 "固定されているため、毎月$NAME|Y$を得ることはありません。固定されていない場合$GAIN$変動します。"
  SUBJECT_INTERACTION_LIBERTY_DESIRE:0 "Liberty desire of the subject needs to be lower than $VAL|0$%."
  SUBJECT_INTERACTION_COOLDOWN:0 "We can't use this interaction again before $DATE|Y$."
- IMPERIAL_AUTHORITY_MODIFIER_DESC:0 "It is further multiplied by $VALUE|1+%$ due to:"
+ IMPERIAL_AUTHORITY_MODIFIER_DESC:0 "さらに以下により$VALUE|1+%$が乗算されます："
  HRE_DISMANTLE_PRESTIGE:0 "which gives us $VAL|G1$ prestige."
  ONLY_MANUFACTORIES:0 "Manufactories"
  MANUFACTORIES_AND_INDUSTRIALIZATION:0 "Manufactories§! and §YIndustrialization"
