Save/Update files [ci skip]

--- a/source/localisation/countries_l_english.yml
+++ b/source/localisation/countries_l_english.yml
@@ -1191,8 +1191,8 @@
  KRM_ADJ:0 "ケルマーン"
  YZD:0 "ヤズド"
  YZD_ADJ:0 "ヤズド"
- ISF:0 "イスファハーン"
- ISF_ADJ:0 "イスファハーン"
+ ISF:0 "エスファハーン"
+ ISF_ADJ:0 "エスファハーン"
  TBR:0 "タブリーズ"
  TBR_ADJ:0 "タブリーズ"
  BSR:0 "バスラ"
