--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -2807,7 +2807,7 @@
  flavor_per.EVTOPTB1:0 "外交改革を実施する。"
  flavor_per.EVTOPTC1:0 "軍事改革を実施する。"
  flavor_per.EVTNAME2:0 "偉大なアッバースの改革"
- flavor_per.EVTDESC2:0 "偉大なシャー、アッバースの治世はサファヴィー朝の頂点を象徴するものであった。彼は訓練された常設の軍隊を開発し、ウズベクを撃ち破り、オスマン帝国に対する彼自身の復讐を果たした。1598年に、彼は新しい首都としてイスファハーンを選んだ。芸術、特に建築の支援者として、彼は世界で最も優れたイスラム記念碑のいくつかと共にイスファハーンを飾った。彼は多くのモスク、学校、橋、主要なバザールを建設した。彼の治世の間に、ペルシアの職人や芸術家は、上質の絹、布、磁器、金属工芸、書道、模型、絨毯の製作に優れていた。"
+ flavor_per.EVTDESC2:0 "偉大なシャー、アッバースの治世はサファヴィー朝の頂点を象徴するものであった。彼は訓練された常設の軍隊を開発し、ウズベクを撃ち破り、オスマン帝国に対する彼自身の復讐を果たした。1598年に、彼は新しい首都としてエスファハーンを選んだ。芸術、特に建築の支援者として、彼は世界で最も優れたイスラム記念碑のいくつかと共にイスファハーンを飾った。彼は多くのモスク、学校、橋、主要なバザールを建設した。彼の治世の間に、ペルシアの職人や芸術家は、上質の絹、布、磁器、金属工芸、書道、模型、絨毯の製作に優れていた。"
  flavor_per.EVTNAME3:0 "偉大なアッバースの顧問"
  flavor_per.EVTDESC3:0 "シャー・アッバースは、西ヨーロッパの軍事技術を大いに賞賛し、喜んで彼の領土へのキリスト教宣教師の受け入れを歓迎し、彼自身が改宗しようとしているとしているふりさえしていた。シャーは最終的にペルシアの陸軍と海軍を改革するため、アントニーとロバート・シャーリーの2人のイングランド人の助けを借りた。その結果が出るのに長い時間はかからなかった。アッバースはポルトガル人からバーレーンを奪い、ホルムズの拠点を略奪した。しかし、ヨーロッパの顧問は、あらゆる地域で不人気であった…"
  flavor_per.EVTOPTA3:0 "イングランドの顧問を雇う。"
