--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -2806,7 +2806,7 @@
  EVTDESC870:1 "農家や鉱夫たちは、地元の[Root.GetLowLevelOfficialForCountry]たちが期待するよりも生産性が高いという報告がある。$COUNTRY$の国民が恩恵を受けることができるものかどうかを調べるべきだ。"
  EVTOPTA870:0 "費用を惜しむな。"
  EVTOPTB870:0 "注意深くやれ。"
- EVTNAME871:0 "地位の売却"
+ EVTNAME871:0 "称号の売却"
  EVTDESC871:0 "我が主君よ、顧問の一人が、支払うことができる人に貴族の称号を売却することを提案した。それは多くの金をもたらし、豊かな者が社会へ進出する道を開くことができるが、それは貴族という概念を価値のないものにし、おそらく既存の貴族の一族を動揺させるだろう。我々はこれをやるべきだろうか？"
  EVTOPTA871:0 "金は貴族の印だ！"
  EVTOPTB871:0 "高潔さは金では買えない！"
