--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -477,7 +477,7 @@
  flavor_hun.31.d:0 "上ハンガリーの多くの豊かな鉱山は、多くの点で経済的利益にとって不可欠であり、したがって、多くの場合、我が国の他の居住地に対して許容しているよりもはるかに大きな自由を与えられてきた。「都市の空気は自由にする」というドイツの言葉は、都市自体のためにも、地域社会の中で道を見いだすかもしれない農奴たち、両方にとって真実である。ヨーロッパ全土の地金供給が不足しているため、都市部の同盟は今やより豊かで、自信を深めている。\nしかし、我々の貴族の中には、彼らが余りにも余裕を持つことを許しており、我が国の防衛のために彼らが提供するよう、最低限の要求はするべきだと主張する人々もいる。"
  flavor_hun.31.a:0 "彼らは他の皆のように貢献しなければならない！"
  flavor_hun.31.b:0 "特権を保護しよう。"
- flavor_hun.32.t:0 "スロヴァキア人意識の覚醒"
+ flavor_hun.32.t:0 "スロバキア民族の目覚め"
  flavor_hun.32.d:0 "上ハンガリーには、スロヴァキアの人々と、この地域の豊かな鉱山を利用しようとしている多くの異なる集団の両方が常に共に暮らしていた。成長する汎スラヴ的な運動に触発され、スロヴァキアの知識人と啓蒙主義者はスロヴァキア国家の可能性について話し始め、スロヴァキアの文学を書き留めて整理し始めた者もいる。"
  flavor_hun.32.a:0 "スロヴァキアに大きな権限を与える時だ。"
  flavor_hun.32.b:0 "彼らはまず、ハンガリー人である、そしてこれからもそうだ。"
