Save/Update files [ci skip]

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -527,7 +527,7 @@
  flavor_mlo.6.a:0 "たぶん、彼は我々のために本を書いてくれるだろう。"
  flavor_mlo.6.b:0 "彼は政治家として役に立つだろう。"
  flavor_mlo.7.t:0 "マキャヴェッリが傑作を出版した！"
- flavor_mlo.7.d:0 "フィレンツェの偉大な息子が『君主論』という本を出版した。それには、世襲の君主に焦点を当てるだけでなく、新しい君主の可能性にも焦点を当て、政治を支配する上で多くのものが含まれている。権力を維持する方法と征服した土地をうまく支配する方法について説明している。最後は手段を正当化する。"
+ flavor_mlo.7.d:0 "フィレンツェの偉大な息子が『君主論』という本を出版した。それには、世襲の君主に焦点を当てるだけでなく、新しい君主の可能性にも焦点を当て、政治を支配する上で多くのものが含まれている。権力を維持する方法と征服した土地をうまく支配する方法について説明している。終わり良ければ総て良し。"
  flavor_mlo.7.a:0 "これが我々にすべてを教えてくれる。"
  flavor_mlo.8.t:0 "マキャヴェッリからの賞賛"
  flavor_mlo.8.d:0 "我々の偉大な公爵は彼の本『君主論』で数回言及され、彼の国を支配する一般的な能力によって賞賛され、傭兵に頼らないよう警告されている。"
