--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -65,13 +65,13 @@
  MODIFIER_NAVAL_MORALE_DAMAGE:0 "海軍士気ダメージ"
  MODIFIER_NAVAL_MORALE_DAMAGE_RECEIVED:0 "海軍被士気ダメージ"
  average_global_autonomy:0 "平均自治率"
- reverse_average_global_autonomy:0 "Reverse Average Autonomy"
+ reverse_average_global_autonomy:0 "反転平均自治度"
  average_overseas_subject_liberty_desire:0 "海外の従属国からの独立欲求平均"
- reverse_average_overseas_subject_liberty_desire:0 "Reverse Average Liberty Desire from Oversea Subjects"
+ reverse_average_overseas_subject_liberty_desire:0 "反転海外従属国からの平均独立欲求"
  average_subject_liberty_desire:0 "独立欲求平均"
- reverse_average_subject_liberty_desire:0 "Reverse Average Liberty Desire"
+ reverse_average_subject_liberty_desire:0 "反転平均独立欲求"
  average_oversea_liberty_desire:0 "海外の独立欲求平均"
- reverse_average_oversea_liberty_desire:1 "Reverse Average Overseas Liberty Desire"
+ reverse_average_oversea_liberty_desire:1 "反転平均海外独立欲求"
  MODIFIER_HAS_TERCIO:0 "テルシオ歩兵が国内で利用可能になる"
  MODIFIER_HAS_MUSKETEER:0 "銃士歩兵が国内で利用可能になる"
  MODIFIER_HAS_SAMURAI:0 "侍歩兵が国内で利用可能になる"
@@ -88,13 +88,13 @@
  MODIFIER_MAY_NOT_CONVERT_TERRITORIES:0 "テリトリーでの改宗不可能"
  MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV_PENALTY:0 "§R$VALUE|=0$ 戦闘ペナルティ§!"
  MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV_BONUS:0 "§G$VALUE|=0$ 戦闘ボーナス§!"
- can_celebrate_festival:0 "§YYou can celebrate a festival!§!"
+ can_celebrate_festival:0 "§Y祝祭を祝うことができます！§!"
  MODIFIER_NO_COST_FOR_REINFORCING:0 "補充コストなし"
- LOOT_RECOVERY_DATE_AFTER:0 "This province was last looted on $LAST_LOOT_DATE|Y$. It's recovering by §G$PERCENTAGE$%§! monthly, unless it is looted again."
- holy_order_short:0 "Order"
- holy_order_full:0 "Holy Order"
- coordinator_office_short:0 "Office"
- coordinator_office_full:0 "Grand Coordinator Office"
+ LOOT_RECOVERY_DATE_AFTER:0 "この州は$LAST_LOOT_DATE|Y$に最後に略奪されました。再度略奪されない限り、毎月§G$PERCENTAGE$%§!回復します。"
+ holy_order_short:0 "修道会"
+ holy_order_full:0 "修道会"
+ coordinator_office_short:0 "調整官"
+ coordinator_office_full:0 "大調整官"
  EVERY_OWNED_OR_SUBJECT_PROV:0 "自国または従属国が領有しているすべての州"
  NO_ANY_OWNED_OR_SUBJECT_PROVINCE_STARTS:0 "いずれの州も自国または従属国が所有していない"
  NO_ANY_OWNED_OR_NON_TRIBUTARY_PROVINCE_STARTS:0 "いずれの州も自国または従属国（非朝貢国）が所有していない"
@@ -102,12 +102,12 @@
  ANY_OWNED_OR_NON_TRIBUTARY_PROVINCE_STARTS:0 "いずれかの州を自国または従属国（非朝貢国）が所有している"
  ALL_OWNED_OR_SUBJECT_PROVINCE_STARTS:0 "すべての州を自国または従属国が所有している"
  ALL_OWNED_OR_NON_TRIBUTARY_PROVINCE_STARTS:0 "すべての州を自国または従属国（非朝貢国）が所有している"
- RANDOM_PROVINCES_AMOUNT:0 " ($AMOUNT$ random)"
- RANDOM_PROVINCES_AMOUNT_TOOLTIP:0 "$AMOUNT$ Random Provinces in "
- ONE_RANDOM_PROVINCE_TOOLTIP:0 "Random Province in "
- PROVINCE_GROUP:0 "Province Group"
- EVERY_OWNED_OR_NON_TRIBUTARY_PROV:0 "Every province owned or owned by non tributary subjects"
- FRONTIER_TOOLTIP:0 "$COUNTRY|Y$ is bulding a colony in $PROVINCE|Y$. Its current size is $AMOUNT|0$. Each month it will increase the population by $MIN$-$MAX$."
+ RANDOM_PROVINCES_AMOUNT:0 "（ランダムで$AMOUNT$）"
+ RANDOM_PROVINCES_AMOUNT_TOOLTIP:0 "$AMOUNT$のランダム州で"
+ ONE_RANDOM_PROVINCE_TOOLTIP:0 "ランダム州で"
+ PROVINCE_GROUP:0 "州グループ"
+ EVERY_OWNED_OR_NON_TRIBUTARY_PROV:0 "全州を自国もしくは自国の朝貢国以外の従属国で領有している"
+ FRONTIER_TOOLTIP:0 "$COUNTRY|Y$は$PROVINCE|Y$に植民地を建設しています。現在の人口は$AMOUNT|0$です。人口は毎月$MIN$ー$MAX$の間で増加します。"
  RETURN_CORE_COUNTRY_OFFDESC:0 "$RECIPIENT$に対し、同盟国への好意の証として$TAG$の中核州$PROV$を返還するよう要求します。これには好感度が$FAVOURS$かかります。"
  land_units_killed:0 "殺された陸上ユニット"
  land_units_lost:0 "失った陸上ユニット"
@@ -123,33 +123,33 @@
  MODIFIER_LOCAL_HAS_STRELTSY:0 "ストレリツィ歩兵が州内で利用可能になる"
  STRELTSY_LIMIT_CULTURE:0 "$PROVINCE$は$CULTURE$文化の州なので、カロリアン歩兵を募集できません。"
  STRELTSY_FORCELIMIT:0 "以下の要因により、扶養限界$FL$のうち$VAL|%Y$分まで§Gストレリツィ§!を募集できます：\n"
- TRIG_STATE_NOT_PROSP_NONAME:0 "Is NOT prosperous."
- TRIG_STATE_PROSP_NONAME:0 "Is prosperous."
- HAD_RULER_FLAG_LESS_THAN:1 "Had ruler flag '$FLAG|Y$' for less than $DAYS|Y$ days (Current: $CURRENT|Y$)"
- HAD_RULER_FLAG_AT_LEAST:1 "Had ruler flag '$FLAG|Y$' for at least $DAYS|Y$ days (Current: $CURRENT|Y$)"
+ TRIG_STATE_NOT_PROSP_NONAME:0 "繁栄していない。"
+ TRIG_STATE_PROSP_NONAME:0 "繁栄している。"
+ HAD_RULER_FLAG_LESS_THAN:1 "統治者フラグ「$FLAG|Y$」を$DAYS|Y$日未満持った（現在：$CURRENT|Y$）"
+ HAD_RULER_FLAG_AT_LEAST:1 "統治者フラグ「$FLAG|Y$」を$DAYS|Y$日以上持った（現在：$CURRENT|Y$）"
  vassal_scutage_at_war:0 "戦争中の従属国に軍役代納金を求めることはできません！"
- OTHER_FORCES:0 "And $AMOUNT$ from $OTHER$ other countries"
- MAPMODE_PARLIAMENT_SEATS:0 "Parliament Seats"
- MAPMODE_PARLIAMENT_SEATS_DESC:0 "Displays which Provinces have a parliament seat assigned."
- PARLIAMENT_SEATS_TOOLTIP:0 "$PROVINCE|Y$ has a parliament seat."
+ OTHER_FORCES:0 "他国$OTHER$から$AMOUNT$"
+ MAPMODE_PARLIAMENT_SEATS:0 "議席"
+ MAPMODE_PARLIAMENT_SEATS_DESC:0 "どの州で議会の議席を割り当てられているかを表示します。"
+ PARLIAMENT_SEATS_TOOLTIP:0 "$PROVINCE|Y$州は議会の議席を持っている"
  SPECIAL_UNIT_FORCELIMIT_MODIFIER_LABEL:0 "この数値はさらに以下の要因によって$VAL|+%$乗算される:\n$MODIFIER$\n\n"
  TRADE_NODE_INCOME_EFFECT:0 "$NODE|Y$交易ノードから$AMOUNT|0$ヵ月分の収入に相当する$VALUE$ダカットを$DIRECTION$。\n"
  GRANT_PRIVILEGE_SHORT:0 "$PRIVILEGE|Y$が$ESTATE|Y$に与えられ、以下があります："
  REVOKE_PRIVILEGE_SHORT:0 "$PRIVILEGE|Y$が$ESTATE|Y$から取り消され、以下がなくなります："
  PRIVILEGE_EFFECTS:0 "§Y効果：§!"
  PRIVILEGE_TO_REVOKE:0 "§Y取り消し条件：§!"
- IMPERIAL_INCIDENT_STARTED_LOG:0 "An imperial incident started in the Holy Roman Empire."
- has_slacken_on_instant:0 "§YYou are Slackening Recruiting Standards§!"
+ IMPERIAL_INCIDENT_STARTED_LOG:0 "神聖ローマ帝国にて帝国事件が始まりました。"
+ has_slacken_on_instant:0 "§Y自国は募集基準を緩和しています§!"
  has_slacken_on_delayed:0 ""
  GOVERNMENT_POWER_FROZEN:0 "固定されているため、毎月$NAME|Y$を得ることはありません。固定されていない場合$GAIN$変動します。"
- SUBJECT_INTERACTION_LIBERTY_DESIRE:0 "Liberty desire of the subject needs to be lower than $VAL|0$%."
- SUBJECT_INTERACTION_COOLDOWN:0 "We can't use this interaction again before $DATE|Y$."
+ SUBJECT_INTERACTION_LIBERTY_DESIRE:0 "従属国の独立欲求は$VAL|0$%未満である必要がある。"
+ SUBJECT_INTERACTION_COOLDOWN:0 "$DATE|Y$日経過するまでインタラクションが使用できません。"
  IMPERIAL_AUTHORITY_MODIFIER_DESC:0 "さらに以下により$VALUE|1+%$が乗算されます："
- HRE_DISMANTLE_PRESTIGE:0 "which gives us $VAL|G1$ prestige."
- ONLY_MANUFACTORIES:0 "Manufactories"
- MANUFACTORIES_AND_INDUSTRIALIZATION:0 "Manufactories§! and §YIndustrialization"
- SIDETRUCEENDS_TITLE:0 "Truce Ended"
- SIDETRUCEENDS_SETUP:0 "When a one-sided truce ends between your nation and another."
+ HRE_DISMANTLE_PRESTIGE:0 "自国に威信が$VAL|G1$与えられる。"
+ ONLY_MANUFACTORIES:0 "工場"
+ MANUFACTORIES_AND_INDUSTRIALIZATION:0 "工場§!と§Y産業革命"
+ SIDETRUCEENDS_TITLE:0 "停戦の終了"
+ SIDETRUCEENDS_SETUP:0 "自国と他国間で一方的な停戦が終了したとき。"
  SIDETRUCEENDS_HEADER:0 "宰相からの報告"
  SIDETRUCEENDS_1:0 "片側だけの停戦切れ"
  SIDETRUCEENDS_2:0 "$OUR_THEIR$の$US_THEM$との停戦が終了しました。"
@@ -159,9 +159,9 @@
  SIDETRUCEENDS_BTN1:0 "OK"
  SIDETRUCEENDS_BTN2:0 "OK"
  SIDETRUCEENDS_BTN3:0 "移動"
- OUR_CAPITAL:0 "Our"
- WE_CAPITAL:0 "We"
- THEY_CAPITAL:0 "They"
- MODIFIER_ALLOWED_COSSACK_FRACTION:0 "Cossack Force Limit Fraction"
- MODIFIER_ALLOWED_REV_GUARD_FRACTION:0 "Revolutionary Guard Force Limit Fraction"
- MODIFIER_ALLOWED_RAJPUT_FRACTION:0 "Rajput Force Limit Fraction"
+ OUR_CAPITAL:0 "自国の"
+ WE_CAPITAL:0 "自国"
+ THEY_CAPITAL:0 "彼ら"
+ MODIFIER_ALLOWED_COSSACK_FRACTION:0 "コサック扶養限界比率"
+ MODIFIER_ALLOWED_REV_GUARD_FRACTION:0 "革命衛兵扶養限界比率"
+ MODIFIER_ALLOWED_RAJPUT_FRACTION:0 "ラージプート扶養限界比率"
